syntax = "proto3";

package mtn_proto;

import "transaction.proto";

option go_package = "/mtn_proto";

// Batch chứa một tập hợp các giao dịch được đề xuất bởi một node.
// Message này được sử dụng để chuẩn bị cho thuật toán đồng thuận Alea-BFT.
message Batch {
    bytes hash = 1; // Hash của header batch (ví dụ: Merkle root của các giao dịch, block_number, proposer_id)
    repeated transaction.Transaction transactions = 2;
    uint64 block_number = 3;
    bytes proposer_id = 4; // Public key của người đề xuất
}


message FillGapRequest {
  int32 queue_id = 1;
  uint64 head = 2;
  int32 sender_id = 3;
}

// Gửi từ node có dữ liệu để trả lời cho FillGapRequest
message FillerRequest {
  repeated bytes entries = 1; // Danh sách các payload (batch) bị thiếu
}